[package]
name = "stableswap-3pool"
version = "1.2.3"
authors = ["Adam J. Weigold <adam@irulast.com>"]
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
publish.workspace = true

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
injective = ["white-whale-std/injective"]
osmosis = ["osmosis_token_factory"]
token_factory = ["white-whale-std/token_factory"]
osmosis_token_factory = ["white-whale-std/osmosis_token_factory"]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw2.workspace = true
cw20.workspace = true
num-traits = "0.2"
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
integer-sqrt = "0.1.5"
schemars.workspace = true
serde.workspace = true
semver.workspace = true
thiserror.workspace = true
protobuf.workspace = true
white-whale-std.workspace = true
cosmwasm-schema.workspace = true
classic-bindings.workspace = true

[dev-dependencies]
proptest = "1.0.0"
rand = "0.8.4"
stable-swap-sim = { path = "./sim", version = "^0.1" }
