[package]
name = "terraswap-factory"
version = "1.2.0"
authors = [
	"Terraform Labs, PTE.",
	"DELIGHT LABS",
	"Kerber0x <kerber0x@protonmail.com>",
]
edition.workspace = true
description = "A Terraswap factory contract - auto pair contract generator and also directory for all pairs"
license.workspace = true
publish.workspace = true

exclude = [
	# Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
	"contract.wasm",
	"hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
injective = ["pool-network/injective"]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
schemars.workspace = true
serde.workspace = true
protobuf.workspace = true
cw20.workspace = true
cw2.workspace = true
thiserror.workspace = true
semver.workspace = true
pool-network.workspace = true
white-whale.workspace = true
cosmwasm-schema.workspace = true
