[package]
name = "terraswap-pair"
version = "1.2.0"
authors = [
	"Terraform Labs, PTE.",
	"DELIGHT LABS",
	"Kerber0x <kerber0x@protonmail.com>",
]
edition = "2021"
homepage = "https://whitewhale.money"
license = "MIT"
repository = "https://github.com/White-Whale-Defi-Platform/migaloo-core"
publish = false
description = "A Terraswap pair contract"

exclude = [
	# Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
	"contract.wasm",
	"hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
injective = ["terraswap/injective"]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw2.workspace = true
cw20.workspace = true
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
integer-sqrt = "0.1.5"
schemars.workspace = true
serde.workspace = true
semver.workspace = true
thiserror.workspace = true
protobuf.workspace = true
terraswap = { path = "../../../../packages/terraswap" }
white-whale = { path = "../../../../packages/white-whale" }
cosmwasm-schema.workspace = true
