[package]
name = "terraswap-pair"
version = "1.3.0"
authors = [
	"Terraform Labs, PTE.",
	"DELIGHT LABS",
	"Kerber0x <kerber0x@protonmail.com>",
]
edition.workspace = true
description = "A Terraswap pair contract"
license.workspace = true
publish.workspace = true

exclude = [
	# Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
	"contract.wasm",
	"hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
injective = ["pool-network/injective"]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw2.workspace = true
cw20.workspace = true
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
integer-sqrt = "0.1.5"
schemars.workspace = true
serde.workspace = true
semver.workspace = true
thiserror.workspace = true
protobuf.workspace = true
pool-network.workspace = true
white-whale.workspace = true
cosmwasm-schema.workspace = true
