[package]
name = "terraswap-pair"
version = "1.3.3"
authors = [
	"Terraform Labs, PTE.",
	"DELIGHT LABS",
	"Kerber0x <kerber0x@protonmail.com>",
	"kaimen-sano <kaimen_sano@protonmail.com>",
]
edition.workspace = true
description = "A Terraswap pair contract"
license.workspace = true
publish.workspace = true
documentation.workspace = true

exclude = [
	# Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
	"contract.wasm",
	"hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
injective = ["white-whale/injective"]
token_factory = ["white-whale/token_factory"]
osmosis_token_factory = ["white-whale/osmosis_token_factory"]

[dependencies]
cw2.workspace = true
cw20.workspace = true
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
integer-sqrt.workspace = true
schemars.workspace = true
serde.workspace = true
semver.workspace = true
thiserror.workspace = true
protobuf.workspace = true
white-whale.workspace = true
cosmwasm-schema.workspace = true
classic-bindings.workspace = true

[dev-dependencies]
cw-multi-test.workspace = true
cw20-base.workspace = true