[package]
name = "terraswap-router"
version = "1.1.2"
authors = [
  "Terraform Labs, PTE.",
  "DELIGHT LABS",
  "Kerber0x <kerber0x@protonmail.com>",
]
edition.workspace = true
description = "A Terraswap router contract - provides multi-step operations to facilitate single sign operation"
license = "Apache-2.0"
publish.workspace = true
documentation.workspace = true

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
injective = ["white-whale-std/injective"]
osmosis = ["osmosis_token_factory"]
token_factory = ["white-whale-std/token_factory"]
osmosis_token_factory = ["white-whale-std/osmosis_token_factory"]

[dependencies]
cw2.workspace = true
cw20.workspace = true
cosmwasm-std.workspace = true
white-whale-std.workspace = true
cw-storage-plus.workspace = true
integer-sqrt = "0.1.5"
schemars.workspace = true
serde.workspace = true
semver.workspace = true
thiserror.workspace = true
cosmwasm-schema.workspace = true
classic-bindings.workspace = true
