[package]
name = "terraswap-token"
version = "1.0.2"
authors = ["Terraform Labs, PTE.", "DELIGHT LABS"]
edition.workspace = true
description = "Backward compatible implementation of a CosmWasm-20 compliant token"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
injective = ["pool-network/injective"]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw0 = "0.10.3"
cw2.workspace = true
cw20.workspace = true
cw20-base.workspace = true
cw-storage-plus.workspace = true
cosmwasm-std.workspace = true
schemars.workspace = true
serde.workspace = true
thiserror.workspace = true
pool-network.workspace = true

[dev-dependencies]
cosmwasm-schema = "1.1.4"
