[package]
name = "vault"
version = "1.2.1"
authors = ["kaimen-sano <kaimen_sano@protonmail.com>"]
edition.workspace = true
description = "Contract to handle a single vault that controls an asset"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://whitewhale.money"
publish.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
injective = ["pool-network/injective"]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std.workspace = true
cosmwasm-schema.workspace = true
cw2.workspace = true
cw20.workspace = true
cw20-base.workspace = true
cw-storage-plus.workspace = true
protobuf.workspace = true
schemars.workspace = true
semver.workspace = true
serde.workspace = true
pool-network.workspace = true
thiserror.workspace = true
vault-network.workspace = true
white-whale.workspace = true

[dev-dependencies]
cosmwasm-schema = "1.1.4"
cw-multi-test = "0.15.1"
fee_collector = { path = "../../fee_collector" }
