[package]
name = "vault"
version = "1.2.3"
authors = ["kaimen-sano <kaimen_sano@protonmail.com>"]
edition.workspace = true
description = "Contract to handle a single vault that controls an asset"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
injective = ["white-whale/injective"]
token_factory = ["white-whale/token_factory"]
osmosis_token_factory = ["white-whale/osmosis_token_factory"]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std.workspace = true
cosmwasm-schema.workspace = true
cw2.workspace = true
cw20.workspace = true
cw20-base.workspace = true
cw-storage-plus.workspace = true
protobuf.workspace = true
schemars.workspace = true
semver.workspace = true
serde.workspace = true
thiserror.workspace = true
white-whale.workspace = true
classic-bindings.workspace = true

#[dev-dependencies]
#cosmwasm-schema.workspace = true
#cw-multi-test.workspace = true
#fee_collector = { path = "../../fee_collector" }
