[package]
name = "vault_factory"
version = "1.1.1"
authors = [
	"kaimen-sano <kaimen_sano@protonmail.com>, Kerber0x <kerber0x@protonmail.com>",
]
edition.workspace = true
description = "Contract to facilitate the vault network"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://whitewhale.money"
publish.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
injective = ["pool-network/injective"]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std.workspace = true
cw2.workspace = true
cw20.workspace = true
cw-storage-plus.workspace = true
protobuf.workspace = true
schemars.workspace = true
semver.workspace = true
serde.workspace = true
pool-network.workspace = true
thiserror.workspace = true
vault-network.workspace = true
white-whale.workspace = true
cosmwasm-schema.workspace = true

[dev-dependencies]
cw-multi-test = "0.15.1"
cw20-base = "0.15.1"
vault = { path = "../vault" }
fee_collector = { path = "../../fee_collector" }
