[package]
name = "vault_factory"
version = "1.1.3"
authors = [
  "kaimen-sano <kaimen_sano@protonmail.com>, Kerber0x <kerber0x@protonmail.com>",
]
edition.workspace = true
description = "Contract to facilitate the vault network"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
injective = ["white-whale-std/injective"]
osmosis = ["osmosis_token_factory"]
token_factory = ["white-whale-std/token_factory"]
osmosis_token_factory = ["white-whale-std/osmosis_token_factory"]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std.workspace = true
cw2.workspace = true
cw20.workspace = true
cw-storage-plus.workspace = true
protobuf.workspace = true
schemars.workspace = true
semver.workspace = true
serde.workspace = true
thiserror.workspace = true
white-whale-std.workspace = true
cosmwasm-schema.workspace = true
classic-bindings.workspace = true

#[dev-dependencies]
#cw-multi-test.workspace = true
#cw20-base.workspace = true
#vault = { path = "../vault" }
#fee_collector = { path = "../../fee_collector" }
