[package]
name = "stable-swap-sim"
version = "0.1.0"
description = "Simulations of the StableSwap invariant compared to Curve's reference implementation."
authors = ["Paul Stelzig paul@irulast.com>"]
edition = "2021"

[lib]
name = "sim"

[dependencies]
pyo3 = { version = "0.20.2", features = ["auto-initialize"] }
