[package]
name = "stable-swap-sim1"
version = "0.1.0"
description = "Simulations of the StableSwap invariant compared to Curve's reference implementation."
authors = ["Paul Stelzig paul@irulast.com>"]
edition = "2021"

[lib]
name = "sim1"

[dependencies]
pyo3 = { version = "0.17.3", features = ["auto-initialize"] }
